# FIIT_SP

./: .gitignore  compile_commands.json  run-in-noble.sh  run_allocator_tests_menu.sh
allocator/allocator_boundary_tags/demo/: allocator_boundary_tags_demo.cpp
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/demo/: allocator_buddies_system_demo.cpp
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_global_heap/demo/: allocator_global_heap_demo.cpp
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_red_black_tree/demo/: allocator_red_black_tree_demo.cpp
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_sorted_list/demo/: allocator_sorted_list_demo.cpp
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
build-check/: Makefile  cmake_install.cmake
build-check/allocator/: Makefile  cmake_install.cmake
build-check/allocator/allocator/: Makefile  cmake_install.cmake
build-check/allocator/allocator_boundary_tags/: Makefile  cmake_install.cmake
build-check/associative_container/: Makefile  cmake_install.cmake
build-check/common/: Makefile  cmake_install.cmake
(+49 files in other folders)
